apps/api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nivo
  labels:
    name: nivo
    api: nivo
