apps/api/k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: nivo
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
  - port: 5533
    protocol: TCP
